--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "declaration": true,
-    "target": "ES6",
-    "module": "commonjs",
+    "module": "ESNext",
+    "target": "ES2020",
     "rootDir": "./",
     "resolveJsonModule": true,
     "removeComments": true,
